* Die Vorlesung vom 17.1.06
git-svn-id: https://svn.lug-jena.de/uni-skripte@266 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -3864,6 +3864,269 @@ dass sich $f$ als reine \highl{Sinus-Reihe} darstellen lässt.
   \end{gather*}
 \end{bsp}
 
+% 17.01.06
+
+\subsubsection{Orthonormalbasen im Hilbertraum}
+
+\begin{defini}[Hilbertraum]
+  Als \highl{Hilbertraum} $H$ bezeichnet man einen Vektorraum (i.\,A.
+  $\dim H=\infty$ mit folgenden Eigenschaften
+  \begin{itemize}
+   \item es ist ein Skalarprodukt $\sprod{f}{g}$ definiert
+   \item es gibt eine Norm $\norm{f}=\sprod{f}{f}^{\frac{1}{2}}$
+    ($\Rightarrow$ Metrik, Konvergenz)
+   \item $H$ vollständig, d.\,h. jede Cauchyfolge ist in $H$ konvergent
+  \end{itemize}
+\end{defini}
+
+\begin{bemerk}
+  Der Raum $R([-l,l])$ aus dem letzten Abschnitt ist nicht vollständig
+  bzgl. $\norm{f} = \big(\int_{-l}^{-l} \abs{f(x)}^{2}\,dx
+  \big)^{\frac{1}{2}}$. Wir können aber zu dem vollständigen Raum
+  $L_{2}([-l,l]) := \{ f: \int_{-l}^{-l} \abs{f(x)}^{2}\,dx <\infty\}
+  \supset R([-l,l])$ übergehen. Das Integral im $L_{2}$ ist das
+  Lebesgue-Integral.
+\end{bemerk}
+
+\begin{defini}[Orthonormalbasis]
+  Eine Menge $\{v_{j}\}_{j\in J}\subset H$ heißt Orthonormalbasis
+  (ONB) \gdwdef
+  \begin{itemize}
+   \item $\forall j,k\in J: \sprod{v_{j}}{v_{k}} = \begin{cases}1&j=k\\
+                                                     0&j\not=k
+                                                   \end{cases}$
+    (Orthonormalsystem/ONS)
+   \item $\forall v\in H$ gilt $v=\sum_{j\in J} \sprod{v}{v_{j}} v_{j}$
+    konvergent in $H$
+  \end{itemize}
+\end{defini}
+
+Ein Bespiel für eine Orthonormalbasis ist z.\,B. das trigonometrische
+System.
+
+\begin{bemerk}
+  $\{ v_{j}\}_{j\in J}$ sei ein Orthonormalsystem. Dann sind äquivalent:
+  $\forall v\in H$ gilt $v=\sum_{j\in J} \sprod{v}{v_{j}} v_{j}$
+  konvergent in $H$
+  \begin{align*}
+    &\gdw \norm{v^{2}} = \sum_{j\in J} \abs{\sprod{v}{v_{j}}}^{2}
+       &\forall v\in H\\
+    &\gdw \forall v\in H: \sprod{v}{v_{j}}=0 \forall j\in J \gdw v=0
+  \end{align*}
+\end{bemerk}
+
+\subsection{Die Wärmeleitungsgleichung}
+
+Rand-Anfangswert-Problem:
+\begin{flalign}
+  \label{eq:36} u_{t} - u_{xx} &= f(x,t)  &x\in(0,\pi), t>0\\
+  \label{eq:37} u(0,t) &= \mu_{1}(t), u(\pi,t) = \mu_{2}(t) &t>0\\
+  \label{eq:38} u(x,0) &= u_{0}(x) &x\in(0,\pi)
+\end{flalign}
+\autoref{eq:36} paritelle DGL, \autoref{eq:37} Randbedingung,
+\autoref{eq:38} Anfangsbedingung
+
+\minisec{(A) $f(x,t)=0, \mu_{1}(t) = \mu_{2}(t)=0$}
+\begin{enumerate}
+ \item Separation: Finde alle $u(x,t)= X(x)T(t)$ mit \autoref{eq:36} und
+  \autoref{eq:37}. Analog zu \todo{link: 9.3.1}.
+  \begin{enumerate}
+   \item \label{enu:4} $X'' -\lambda X =0$ und $X(0) = X(\pi)=0$
+    (Bestimme alle $\lambda, X$)
+
+    Lösung: $\lambda_{k}=-k^{2} (k\in\N), X_{k}=c_{k}\sin kx$
+   \item $T'-\lambda T=0$ für alle $\lambda$ aus \autoref{enu:4}.
+
+    Lösung: $T' = -k^{2}T, T_{k}(t) = d_{k}e^{-k^{2}t}$ wobei $k\in\N$
+  \end{enumerate}
+
+  Lösung: $k\in\N$ $u_{k}(x,t) = b_{k}\sin kxe^{-k^{2}t}$
+ \item Superposition: Bestimme $b_{k}\in\C$, so dass
+  \begin{gather*}
+    u(x,t) := \sum_{k=1}^{\infty} b_{k}\sin kx e^{-k^{2}t}\\
+    u_{0}(x) = \sum_{k=1}^{\infty} b_{k} \sin kx
+  \end{gather*}
+  Das haben wir bereits gelöst. Die $b_{k}$ müssen die
+  Fourierkoeffizienten sein.
+  \begin{gather*}
+    b_{k} = \frac{2}{\pi} \int_{0}^{\pi} u_{0}(x)\sin kx\,dx
+  \end{gather*}
+\end{enumerate}
+
+\minisec{(B.2) $f(x,t)\not= 0, \mu_{1}(t) =\mu_{2}(t)=0, u_{0}(x) =0$}
+Ansatz:
+\begin{gather*}
+  u(x,t) = \sum_{k=1}^{\infty} T_{k}(t) \sin kx
+\end{gather*}
+dazu:
+\begin{gather*}
+  f(x,t) = \sum_{k=1}^{\infty} f_{k}(t) \sin kx
+\end{gather*}
+für festes $t$ mit $f_{k}$ als Fourierkoeffizienten
+\begin{gather*}
+  f_{k}(t) = \frac{2}{\pi} \int_{0}^{\pi} f(x,t) \sin kx\,dx
+\end{gather*}
+
+$u(x,t)$ ist Lösung, falls: $T_{k}' + k^{2} T_{k} = f_{k}(t)$ und
+$T_{k}(0) = 0$ für $k\in\N$.
+
+\minisec{(C) allgemeiner Fall}
+Wie \todo{link: Abschn. 9.3.1} und in den Übungen.
+
+\subsection{Die Laplace-Poisson-Gleichung}
+
+Dirichlet-Problem:
+\begin{gather*}
+  \Delta u=f\quad\text{auf $\Omega\subset\R$ beschränkt}\\
+  u\big|_{\partial \Omega} = g \qquad\text{(Randbedingung)}
+\end{gather*}
+
+Modellfall $n=2$ und $\Omega= (0,\pi)\times(0,\pi)$
+\todo{Bildchen für die Nummerierung der Randstücke link $\Gamma_{1}$,
+  unten $\Gamma_{3}$, rechts $\Gamma_{2}$, oben $\Gamma_{4}$},
+$\partial\Omega = \Gamma_{1}\cup\ldots \cup\Gamma_{4}$.
+
+\minisec{(A) $f=0$ Laplace-Gleichung}
+\begin{gather}\label{eq:39}
+  \Delta u(x,y) = 0\quad(x,y) \in (0,\pi)\times(0,\pi)\\
+  \label{eq:40} u(0,y) = u(\pi,y) =0\quad y\in[0,\pi]\\
+  \label{eq:41} u(x,0) =0, u(x,\pi) = g(x)\quad x\in[0,\pi]
+\end{gather}
+$u$ ist also Null auf $\Gamma_{1}, \Gamma_{2}$ (\autoref{eq:40}) und
+$\Gamma_{3}$ (\autoref{eq:41}).
+
+\begin{enumerate}
+ \item Separation: Finde $u(x,y) = X(x) Y(y)$ mit \autoref{eq:39} und
+  \autoref{eq:40}, sowie $u(x,0) = 0$ aus \autoref{eq:41}.
+
+  \begin{enumerate}
+   \item $X'' -\lambda X=0$ und $X(0) = X(\pi)=0$
+   \item $Y''+\lambda Y=0$ und $Y(0)=0$
+  \end{enumerate}
+
+  Lösung: $u_{k}(x,y) = b_{k}\sin kx \sinh ky$ mit $k\in\N$
+ \item Superposition: Bestimme $b_{k}$, so dass
+  \begin{gather*}
+    u(x,y) = \sum_{k=1}^{\infty} b_{k} \sin kx \sinh ky
+  \end{gather*}
+  eine Lösung von (A) sind. \gdw
+  \begin{align*}
+    u(x,\pi) &= \sum_{k=1}^{\infty} b_{k}\sinh k\pi \sin kx = g(x)
+       &x\in[0,\pi]\\
+    \gdw b_{k} \sinh k\pi &= \frac{2}{\pi} \int_{0}^{\pi} g(x) \sin
+       kx\,dx &k\in\N
+  \end{align*}
+  siehe Übungsaufgaben 6+7 in Serie 39.
+\end{enumerate}
+
+\minisec{(B) Die Poisson-Gleichung: $f\not=0, g=0$}
+\begin{gather}\label{eq:42}
+  -\Delta u(x,y) = f\quad\text{auf $\Omega$}\\
+  \label{eq:43} u\big|_{\partial\Omega} =0
+\end{gather}
+
+Idee: $f=\sum_{j} a_{j} u_{j}$, wobei $(u_{j})_{j}$ sind ein
+Orthonormalsystem bzgl. $\sprod{u}{v} = \int_{\Omega}
+u(x)\overline{v(x)}\,dx$, d.\,h. $a_{j} = \sprod{f}{u_{j}}$.
+
+Lösungsansatz:
+\begin{gather*}
+  u=\sum_{j=1}^{\infty} b_{j} u_{j}
+\end{gather*}
+$u$ erfüllt \autoref{eq:42} und \autoref{eq:43} \gdw
+\begin{gather*}
+  \sum_{j=1}^{\infty} b_{j}\Delta u_{j} = \sum_{j=1}^{\infty} a_{j} u_{j}\\
+  u_{j}\big|_{\partial\Omega} =0\quad \forall j\in\N
+\end{gather*}
+erfüllt, falls:
+\begin{gather*}
+  -\Delta u_{j} = \frac{a_{j}}{b_{j}} u_{j}\quad j\in J\\
+  u_{j}\big|_{\partial\Omega} =0
+\end{gather*}
+d.\,h. $\lambda_{j}=\frac{a_{j}}{b_{j}}$ ist ein Eigenwert und $u_{j}$
+zugehörige Eigenfunktion.
+
+Lösungsmethode:
+\begin{enumerate}
+ \item Eigenwerte und Eigenfunktionen:
+  \begin{gather*}
+    -\delta u =\lambda u\\
+    u_{j}\big|_{\partial\Omega} =0
+  \end{gather*}
+  $\Rightarrow$ $(\lambda_{j})_{j}$ Eigenwerte und $u_{j}$
+  Eigenfunktionen und $(u_{j})_{j}$ ist ein Orthonormalsystem.
+ \item Superposition
+  \begin{gather*}
+    f= \sum_{j=1}^{\infty} \sprod{f}{u_{j}} u_{j}
+  \end{gather*}
+  $\Rightarrow$
+  \begin{gather*}
+    u(x) = \sum_{j=1}^{\infty} \frac{\sprod{f}{u_{j}}}{\lambda_{j}} u_{j}
+  \end{gather*}
+  ist Lösung.
+\end{enumerate}
+
+\begin{bsp}
+  \begin{gather*}
+    \Omega = (0,\pi)\times(0,\pi)\\
+    -\Delta u = f\\
+    u_{j}\big|_{\partial\Omega} =0
+  \end{gather*}
+
+  \begin{enumerate}
+   \item Eigenwerte und Eigenfunktionen:
+    \begin{gather*}
+      -\Delta u =\lambda u\\
+      u_{j}\big|_{\partial\Omega} =0
+    \end{gather*}
+
+    Wir machen wieder für die Seperation den Ansatz $u(x,y) = X(x) Y(y)$
+    mit $X(0) = X(\pi) = 0$ und $Y(0) = Y(\pi) =0$ und bekommen die zwei
+    Teilproblem:
+    \begin{enumerate}
+     \item\label{enu:5} $Y'' -\mu Y=0$ und $Y(0) = Y(\pi) = 0$ für alle
+      $\mu$.
+
+      \underline{Lösung:}
+      \begin{align*}
+        u &= -n^{2} &n\in\N\\
+        Y_{n} &= c_{n} \sin ny &n\in\N
+      \end{align*}
+
+     \item $X'' + (\lambda+\mu) X =0$ und $X(0) = X(\pi) = 0$ für $\mu$
+      aus \autoref{enu:5}.
+
+      \underline{Lösung:}
+      \begin{align*}
+        X'' + (\lambda-n^{2}) X &=0\\
+        X(0) = X(\pi) &= 0
+      \end{align*}
+      \gdw für jedes $n$ gilt: $-(\lambda-n^{2}) = -m^{2}$ mit beliebigem
+      $m\in \N$ oder anders geschrieben: $\lambda_{m,n} = m^{2}+n^{2}$.
+
+      $X_{m} = d_{n}\sin mx$
+    \end{enumerate}
+
+    $\Rightarrow$ Eigenwerte: $\lambda_{m,n} = m^{2}+n^{2}$ ($m,n\in \N$)
+    und Eigenfunktionen $u_{m,n}(x,y) = b_{m,n} \sin mx \sin ny$
+
+   \item Superposition: Es ist leicht zu sehen, dass sich die beiden
+    Sinus-Terme orthogonal zueinander sind und wir können in eine
+    Doppelreihe entwickeln.
+    \begin{gather*}
+      f(x,y) = \sum_{m=1}^{\infty} \sum_{n=1}^{\infty} b_{m,n} \sin mx
+         \sin ny \gwd\\
+      b_{m,n} = \frac{4}{\pi^{2}} \int_{0}^{\pi}\int_{0}^{\pi} f(x,y)
+         \sin mx \sin ny\,dx dy
+    \end{gather*}
+    $\Rightarrow$
+    \begin{gather*}
+      u(x,y) = \sum_{m=1}^{\infty} \sum_{n=1}^{\infty}
+         \frac{b_{m,n}}{m^{2}+n^{2}} \sin mx \sin ny
+    \end{gather*}
+  \end{enumerate}
+\end{bsp}
+
 \clearpage
 \appendix
 \pdfbookmark[0]{Index}{index}
