* Die Vorlesungen dieser Woche (31.1. + 1.2.)
git-svn-id: https://svn.lug-jena.de/uni-skripte@273 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -4554,7 +4554,7 @@ Zu beginn einige Wiederholungen:
   Parameterdarstellung. (\todo{Übungsaufgabe})
 \end{bemerk}
 
-\begin{bsp}[fundamentales Beispiel für komplexe Kurvenintegrale]
+\begin{bsp}[fundamentales Beispiel für komplexe Kurvenintegrale]\label{bsp:1}
   $\Gamma$ soll ein Kreis um $z_{0}\in\C$ mit positivem Umlaufsinn sein.
   Parameterdarstellung der Kurve: $g(t) = z = z_{0}+R e^{it}$
   $\Rightarrow$ $z-z_{0} = Re^{it}$ mit $t\in[0,2\pi]$.
@@ -4694,6 +4694,373 @@ Zu beginn einige Wiederholungen:
     \end{align*}
   \end{proof}
 \end{satz}
+
+% 31.1.06
+
+\begin{satz}
+  $G\subseteq\C$ offen, $f:G\rightarrow\C$ stetig. Dann sind äquivalent:
+  \begin{enumerate}
+   \item $f$ besitzt eine Stammfunktion in $\C$ ($\exists F:
+    G\rightarrow\C$ holomorph, $F'(z)=f(z)$)
+   \item für jede stückweise stetig differenzierbare geschlossene Kurve
+    $\Gamma\subset G$ ist $\int_{\Gamma} f(z)\,dz = 0$
+   \item Für je zwei stetige Polygonenzüge in $\Gamma$ und $\Gamma'$ in
+    $G$, die zwei beiliebige Punkte $z_{1}\in G$ und $z_{2}\in G$
+    verbunden sind, gilt:
+    \begin{gather*}
+      \int_{\Gamma} f(z)\,dz = \int_{\Gamma'} f(z)\,dz
+    \end{gather*}
+  \end{enumerate}
+
+  \begin{proof}
+    vgl. \todo{link: Satz 8.1.2/10} und \todo{link: Folgerung
+    8.1.2/11}: zunächst für Gebiete $G$, dann $G=\bigcup_{k=1}^{\infty}
+    G_{k}$, wobei $G_{k}$ Gebiete, die paarweise disjunkt sind.
+
+    \obda $G$ sei ein Gebiet. Es gilt (1) $\Rightarrow$ (2) wegen
+    \todo{link Satz 3}, (2) $\Rightarrow$ (3) ist klar.
+
+    zeigen: (3) $\Rightarrow$ (1). Es sei $z\in G, \epsilon>0$,
+    $\exists\delta >0\forall w\in K_{\delta}(z): \abs{f(z)-f(w)}\leq
+    \epsilon$, da $f$ stetig.
+
+    $F(z) := \int_{\Gamma}f(\zeta)\,d\zeta$ unabhängig von der Auswahl
+    von $\Gamma$ nach Vorraussetzung (3). Für ein $w\in K_{\delta}(z)$
+    folgt also $F(w) = F(z) = \int_{[z,w]} f(\zeta)\,d\zeta$. $\Rightarrow$
+    \begin{gather*}
+      \abs{F(w)-F(z)-f(z)\:(w-z)} = \abs[\Big]{ \int_{[z,w]}
+         f(\zeta)\,d\zeta - \int_{[z,w]} f(z)\,d\zeta} =
+         \abs[\Big]{\int_{[z,w]} f(\zeta)-f(z)\,d\zeta} \leq \epsilon
+         \abs{w-z}
+    \end{gather*}
+    $\Rightarrow$ $\lim_{w\rightarrow z} \frac{F(w) - F(z)}{w-z} = f(z)$
+  \end{proof}
+\end{satz}
+
+\subsection{Der Cauchy'sche Integralsatz}
+
+In \todo{satz 10.2.1/6} haben wir unter den Vorraussetzungen (1) $f$
+holomorph in $G$, (2) $f'$ stetig in $G$ und (3) $G$ stetig gezeigt, dass
+für alle geschlossenen Kurven $\Gamma$ das Kurvenintegral $\int_{\Gamma}
+f(z)\,dz =0$.
+
+\todo{Satz 10.2.2/4}: $\exists$ Stammfunktion und $G\subset \C$ offen
+$\Leftrightarrow $ für alle geschlossenen Kurven $\Gamma$ das
+Kurvenintegral $\int_{\Gamma} f(z)\,dz=0$.
+
+Jetzt wollen wir: nur noch (1) und $G$ einfach zusammenhängend
+$\Rightarrow$ für alle geschlossenen Kurven $\Gamma$ das Kurvenintegral
+$\int_{\Gamma} f(z)\,dz =0$.
+
+\begin{lemma}[Satz von Goursat]
+  $G\subset \C$ offen, $f:G\rightarrow\C$ holomorph $\Rightarrow$ Für
+  jedes abgeschlossene Dreieck $\Delta\subset G$ ist das Integral über
+  den Rand
+  \begin{gather*}
+    \int_{\partial\Delta} f(z)\,dz = 0
+  \end{gather*}
+
+  \begin{proof}
+    $\Rightarrow$ $\int_{\partial\Delta} f\,dz = \sum_{j=1}^{4}
+    \int_{\partial\Delta^{(j)}}f\,dz$
+
+    Es gelten folgende Eigenschaften: $\exists
+    \Delta_{1}\in\{\Delta^{(1),\ldots,\Delta^{(4)}}\}$ mit:
+    \begin{itemize}
+     \item $\abs{\int_{\partial\Delta} f(z)\,dz} \leq 4
+      \abs{\int_{\partial\Delta_{1}} f(z)\,dz}$ (Beweis geht indirket)
+     \item $L(\partial \Delta_{1}) = \frac{1}{2} L(\partial\Delta)$
+     \item $d(\Delta_{1}) = \max_{z, w\in\Delta_{1}} \abs{z-w} =
+      \frac{1}{2}d\Delta$
+    \end{itemize}
+
+    Iteration (gleiche Prozedur mit $\Delta_{1}$ stelle von
+    $\Delta$,\ldots). Bekommen daraus eine Folge von Dreiecken
+    $(\Delta_{j})_{j}$ ($j\in\N$) mit:
+    \begin{enumerate}
+     \item $\Delta\supseteq\Delta_{1}\supset \Delta_{2}\supset\ldots $
+     \item $\abs{\int_{\partial\Delta} f\,dz} \leq 4^{j}
+      \abs{\int_{\partial\Delta_{j}} f\,dz}$
+     \item $L(\partial\Delta_{j}) = 2^{-j} L(\partial \Delta)$
+     \item $d(\Delta_{j}) = 2^{-j} d(\Delta)$
+    \end{enumerate}
+
+    Auswahl einer Folge $(z_{j})_{j}$ mit $z_{j}\in\Delta_{j}$
+    ($j\in\N$). $(z_{j})_{j}$ ist eine Cauchyfolge, da $z_{k}\in
+    \Delta_{j}$ ($k\geq j$) und $d(\Delta_{j})
+    \xrightarrow{j\rightarrow\infty} 0$. Daraus folgt dann, dass der Limes
+    der Folge existiert und in $\Delta_{j}$ liegt
+    \begin{gather*}
+      \lim_{k\rightarrow\infty} z_{k} = z_{0}\in \Delta_{j}\quad (\forall
+         j)
+    \end{gather*}
+
+    Es sei $\exists>0$. $f$ holomorph in $z_{0}$ $\Rightarrow$
+    \begin{gather*}
+      \abs{\frac{f(z) - f(z_{0}) - f'(z_{0})\:(z-z_{0})}{z-z_{0}}} =
+         \abs{h(z)} \leq \epsilon\qquad\text{für }\abs{z-z_{0}\leq \delta}
+    \end{gather*}
+    $\Rightarrow$ $f(z) = f(z_{0}) + f'(z_{0})\:(z-z_{0}) +
+    h(z)\:(z-z_{0})$ mit $\abs{h(z)}\leq \epsilon$ Für $j\geq j_{0}$ ist
+    $\Delta_{j}\subset K_{\delta}(z_{0})$. Dann können wir folgendermaßen
+    argumentieren:
+    \begin{gather*}
+      \int_{\partial\Delta_{j}} f(z)\,dz = f(z_{0})
+         \int_{\partial\Delta_{j}} dz + f'(z_{0})
+         \int_{\partial\Delta_{j}} (z-z_{0})\,dz +
+         \int_{\partial\Delta_{j}} h(z)\:(z-z_{0})
+    \end{gather*}
+    Da die Stammfunktion zu 1 und $(z-z_{0})$ (\autoref{bsp:1})
+    existiert, ist das Integral 0. \help{wieso?}
+
+    \begin{gather*}
+      \abs{\int_{\partial\Delta_{j}} f(z)\,dz} = \abs{
+         \int_{\partial\Delta_{j}} h(z)\:(z-z_{0})\,dz} \leq \epsilon
+         2^{-j} d(\Delta) 2^{-j} L(\partial\Delta)
+    \end{gather*}
+
+    mit (2) folgt:
+    \begin{gather*}
+      \abs{\int_{\partial\Delta} \epsilon d(\Delta) L(\partial\Delta)}
+         \Rightarrow ^{\forall \epsilon>0} \int_{\partial\Delta} f(z)\,dz
+         =0
+    \end{gather*}
+  \end{proof}
+\end{lemma}
+
+\begin{lemma}[Verschärfung des Satz' von Goursat]
+  $G\subset \C$ offen, $\Delta\subset G$ abgeschlossenes Dreieck, $a\in
+  G$, $h:G\rightarrow\C$ stetig in $G$ und $h$ holomorph in
+  $G\setminus\{a\}$ $\Rightarrow$
+  \begin{gather*}
+    \int_{\partial\Delta} h\,dz = 0
+  \end{gather*}
+
+  \begin{proof}
+    Es sei ein Dreieck gegeben durch $\Delta = (z_{1}, z_{2}, z_{3})$.
+    Wir müssen die verschiedene Fälle bzgl. der Lage von $a$ betrachten:
+    \begin{faelle}
+     \item Wenn $a$ außerhalb des Dreiecks $\Delta$ liegt
+      ($a\not\in\Delta$), kann man eine offene Umgebung um das Dreieck
+      $\Delta$ finden, die nicht $a$ enthält und wir können \todo{link
+      lemma 1} anwenden. Also $\int_{\partial\Delta} h\,dz =0$
+
+     \item Ist $a$ ein Eckpunkt des Dreicks (\obda $a=z_{1}$), können wir
+      das Dreieck $\Delta$ in drei Einzeldreiecke $\Delta_{1},
+      \Delta_{2},\Delta_{3}$ zerlegen, so dass $a$ nur im Dreick
+      $\Delta_{1}$ liegt. Nach dem ersten Fall sind die Integrale über
+      $\Delta_{2}$ und $\Delta_{3}$ Null. Es bleibt also
+      $\int_{\partial\Delta} f\,dz = \int_{\partial\Delta_{1}} h\,dz$. Da
+      $h$ stetig ist, ist
+      \begin{gather*}
+        \abs{\int_{\partial\Delta_{1}} h(z)\,dz} \leq \sup_{z\in\Delta}
+           \abs{h(z)} L(\partial \Delta_{1}) \rightarrow 0
+      \end{gather*}
+      gegen Null, weil man das Dreieck belieb klein machen kann
+
+     \item Ist $a$ ein Punkt auf dem Rand des Dreiecks (\obda
+      $a\in[z_{1},z_{2}]$), so kann man das Dreieck in zwei Dreiecke
+      $(z_{1}, a, z_{3})$ und $(a, z_{2}, z_{3})$ zerlegen und mit Fall 2
+      sind die Integrale über beide Dreiecke Null.
+
+     \item Als letzter Fall könnte $a$ noch ein innerer Punkt des
+      Dreiecks sein. Dann können wir aber mit einer Strecke eines
+      beliebigen Eckpunkts aus durch $a$ das Dreieck in zwei Teildreiecke
+      zerlegen und erhalten die gleiche Situation wie in Fall 3.
+    \end{faelle}
+  \end{proof}
+\end{lemma}
+
+\begin{bemerk}[Polygonenzüge]
+  $z_{0}, z_{1}, \ldots,z_{n}\in G\subset\C, \Gamma_{j}=[z_{j-1}, z_{j}]$
+  \begin{gather*}
+    \Gamma = \sum_{j=1}^{n} \Gamma_{j} = [z_{0}, z_{1}, \ldots,z_{j-1},
+       z_{j}, \ldots,z_{n}]
+  \end{gather*}
+  $\Gamma$ heißt \highl{stetiger Polygonenzug} (stückweise stetig
+  differenzierbar)
+
+  $[z_{j}, z_{j}]\sim $ Punkt heißt \highl{leerer Polygonenzug}.
+
+  zulässige Operationen für Polygonenzüge in $G$:
+  $\Gamma = [z_{0}, \ldots,z_{j-1}, z_{j}, z_{j+1}, \ldots,z_{n}]$ und
+  $\Gamma^{\ast} = [z_{0}, \ldots,z_{j-1}, z_{j+1}, \ldots,z_{n}]$ Die
+  Überführung von $\Gamma$ nach $\Gamma^{\ast}$ bzg. von $\Gamma^{\ast}$
+  nach $\Gamma$ heißt \highl{zulässige Operation} \gdwdef Das
+  abgeschlossene Dreieck $\Delta_{j} = (z_{j-1}, z_{j}, z_{j+1})$ liegt
+  in $G$
+\end{bemerk}
+
+% 1.2.06
+
+\begin{defini}
+  Wir bezeichnen $G\subset \C$ als ein \highl{zusammenhängendes Gebiet}
+  \gdwdef
+  \begin{enumerate}
+   \item $G$ ist zusammenhängend (d.\,h. Gebiet) und
+   \item jede geschlossener Polygonenzug in $G$ lässt sich durch endlich
+    viele zulässige Operationen in einen leeren Polygonenzug überführen.
+  \end{enumerate}
+\end{defini}
+
+\begin{bsp}
+  $G$ konvexes Gebiet $\Rightarrow$ $G$ ist sternförmig $\Rightarrow$ $G$
+  ist einfach zusammenhängend
+\end{bsp}
+
+\begin{bemerk}
+  $\Gamma\subset \C$ geschlossener Polygonenzug, doppelpunktfrei
+  (Jordanscher Polygonenzug) $\Rightarrow$ Das Komplement von $\Gamma$
+  besteht aus zwei disjunkten Gebieten. Eines der Gebiet ist beschränkt
+  ("`Innengebiet"') (und einfach zusammenhängend), das andere ist
+  unbeschränkt ("`Außengebiet"').
+
+  Diese Aussage gilt auch für beliebige stetige Jordankurven
+  (\highl{Jordanscher Kurvensatz}).
+
+  Außerdem gilt für ein Gebiet $G$: $G$ einfach zusammenhängend \gdw Für
+  jede geschlossene stetige Jordankurve in $G$ gehört das Innengebiet zu
+  $G$.
+\end{bemerk}
+
+\begin{lemma}
+  $G$ einfach zusammenhängendes Gebiet, $\Gamma\subset G$ geschlossener
+  Polygonenzug $\Rightarrow$ $\Gamma = \sum\pm\partial\Delta_{j}$
+  (endliche Summe), wobei $\Delta_{j}\subset G$ abgeschlossenes Dreieck.
+
+  \begin{proof}
+    (Pseudobeweis) Eine Polygon lässt sich immer in Dreiecke zulegen.
+    (Mit Inklusions-Exklusions-Prinzip \help{lässt sich das wirklich im
+    IEP machen oder sieht das nur auf den ersten Blick so aus? DML1/2}
+    lässt sich dann der Polygonenzug durch $\Gamma = \partial\Delta_{1} +
+    \partial\Delta_{2} - \partial\Delta_{3}$ schreiben)
+  \end{proof}
+\end{lemma}
+
+\begin{lemma}
+  $G\subset \C$ einfach zusammenhängendes Gebiet, $a, z_{0}, z_{1}\in G,
+  \Gamma_{1}, \Gamma_{2}$ seien Polygonenzüge von $z_{0}$ nach $z_{1}$
+  und $f:G\rightarrow\C$ stetig und holomorph in $G\setminus\{a\}$. Dann
+  ist
+  \begin{gather*}
+    \int_{\Gamma_{1}} f\,dz = \int_{\Gamma_{2}} f\,dz
+  \end{gather*}
+
+  \begin{proof}
+    $\Gamma:= \Gamma_{1}-\Gamma_{2}$ ist dann eine geschlossene Kurve in
+    $G$.
+    \begin{gather*}
+      \int_{\Gamma} f\,dz =^{Lemma 7} \sum \pm \int_{\partial\Delta_{j}}
+         f\,dz =^{lemma 2} 0\\
+      \Rightarrow \int_{\Gamma_{1}} f\,dz = \int_{\Gamma_{2}} f\,dz
+    \end{gather*}
+  \end{proof}
+\end{lemma}
+
+\begin{satz}[Cauchy'ser Integralsatz]
+  Es sei $G\subset\C$ ein einfach zusammenhängendes Gebiet,
+  $f:G\rightarrow\C$ holomorph. Dann gilt für jede geschlossene
+  stückweise stetig differenzierbare Kurve $\Gamma\subset G:$
+  \begin{gather*}
+    \int_{\Gamma} f(z)\,dz = 0
+  \end{gather*}
+
+  \begin{proof}
+    nach \todo{link: Satz 10.2.2/4} ist es ausreichend zu zeigen, dass
+    $f$ eine Stammfunktion besitzt. Definieren: $F(z) := \int_{\Gamma}
+    f(\zeta)\,d\zeta$, wobei $\Gamma$ ein stetiger Polygonenzug von
+    $z_{0}$ (fest) nach $z\in G$. \todo{link: Lemma 8} liefert:
+    Definition unabhängig von Auswahl des Polygonenzugs $\Gamma$. $F$ ist
+    Stammfunktion (Siehe Schritt (3)$\Rightarrow$(1) ind \todo{link: Satz
+    10.2.2/4})
+  \end{proof}
+\end{satz}
+
+\begin{folger}\label{fol:2}
+  Die Aussage von \todo{link: Satz 9} gilt auch für $f: G\rightarrow\C$
+  stetig, holomorph in $G\setminus\{a\}$ ($a\in G$).
+\end{folger}
+
+\subsection{Die Cauchy'sche Integralformel}
+
+\begin{lemma}
+  $G\subset \C$ offen, $z_{0}\in G, r>0, \delta>0$, so dass
+  $\overline{K_{r}(z_{0})} = \{z\colon \abs{z-z_{0}}\leq r\}\subset G$.
+  Es sei $z\in K_{r}(z_{0})$ und $\overline{K_{\delta}(z)}\subset
+  K_{r}(z_{0})$. Es sei $h$ holomorph in $G\setminus\{z\}$. $\Rightarrow$
+  \begin{gather*}
+    \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+       \oint_{\abs{\zeta-z}=\delta} h(\zeta)\,d\zeta
+  \end{gather*}
+
+  \begin{proof}
+    $\Omega := K_{r+\epsilon}(z_{0})\setminus\gamma$ ist sternförmiges
+    Gebiet, $\Omega\subset G$, $h$ ist holomorph in $\Omega$. $\Gamma_{1}
+    +\Gamma_{2}+\Gamma_{3}+\Gamma_{4}$ ist eine geschlossene stückweise
+    glatte Kurve in $\Omega$. $\Rightarrow$ $^{Satz 10.2.3/9}$
+    \begin{gather*}
+      \int_{\Gamma_{1}} h\,d\zeta + \ldots+ \int_{\Gamma_{4}} h\,d\zeta = 0
+    \end{gather*}
+
+    analog zeigt man:
+    \begin{gather*}
+      \int_{\Gamma_{5}} h\,d\zeta - \int_{\Gamma_{4}} h\,d\zeta +
+         \int_{\Gamma_{6}} h\,d\zeta - \Gamma_{2}h\,d\zeta =0
+    \end{gather*}
+    Summe über beide:
+    \begin{gather*}
+      \int_{\Gamma_{1}+\Gamma_{3}+\Gamma_{5}+\Gamma_{6}} h\,d\zeta = 0
+         \Leftrightarrow \int_{\Gamma_{1}+\Gamma_{5}} h\,d\zeta =
+         -\int_{\Gamma_{3}+\Gamma_{6}} h\,d\zeta
+    \end{gather*}
+    Das Minus ist begründet in der Orientierung der Kurven. \todo{Leider
+    fehlen hier die wichtigen Skizzen}.
+  \end{proof}
+\end{lemma}
+
+\begin{satz}[Die Cauchy'sche Integralformel]
+  $G\subset \C$ offen, $f\colon G\rightarrow\C$ holomorph, $z_{0}\in G$,
+  $\overline{K_{r}(z_{0})}\subset G$ ($r>0$). Dann gilt:
+  \begin{gather*}
+    f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+       \frac{f(\zeta)}{\zeta-z}\,d\zeta
+  \end{gather*}
+  für alle $z\in K_{r}(z_{0})$.
+
+  \begin{proof}
+    Wir betrachten das sternförmige Gebiet $\Omega :=
+    K_{r+\epsilon}(z_{0})$ (existiert, das $G$ offen ist). Für $z\in G$
+    ist
+    \begin{gather*}
+      h(\zeta) := \begin{cases}
+                    \frac{f(\zeta)-f(z)}{\zeta-z}& \zeta\not= z\\
+                    f'(z)& \zeta=z
+                  \end{cases}
+    \end{gather*}
+    stetig in $\Omega$ und holomorph auf $\Omega\setminus\{z\}$. Nach
+    \autoref{fol:2} gilt der Cauchy'sche Integralsatz für $h$ und
+    \begin{align*}
+      0 &= \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(z)}{\zeta-z}d\zeta\\
+      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\oint_{\abs{\zeta-z_{0}}=r} \frac{1}{\zeta-z}d\zeta\\
+      &=\oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\oint_{\abs{\zeta-z}=\delta} \frac{d\zeta}{\zeta-z}
+         &\text{nach \todo{link: lemma 1}}\\
+      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z) 2\pi i &\text{nach \todo{link: bsp 10.2.1/4}}
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\begin{bsp}
+  \begin{gather*}
+    \int_{\abs{z}=2} \frac{\sin z}{z+i}dz = 2\pi i \sin(-i) = 2\pi i
+       \frac{1}{2 i}(e-e^{-1}) = \pi (e-\frac{1}{e})
+  \end{gather*}
+  Singularität bei $-i$.
+\end{bsp}
 
 \clearpage
 \appendix
