--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -4983,7 +4983,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
 
 \subsection{Die Cauchy'sche Integralformel}
 
-\begin{lemma}
+\begin{lemma}\label{lem:3}
   $G\subset \C$ offen, $z_{0}\in G, r>0, \delta>0$, so dass
   $\overline{K_{r}(z_{0})} = \{z\colon \abs{z-z_{0}}\leq r\}\subset G$.
   Es sei $z\in K_{r}(z_{0})$ und $\overline{K_{\delta}(z)}\subset
@@ -5062,6 +5062,198 @@ $\int_{\Gamma} f(z)\,dz =0$.
   Singularität bei $-i$.
 \end{bsp}
 
+% 7. Feb. 06
+
+\begin{bemerk}
+  Für $z=z_{0}$ gilt
+  \begin{gather*}
+    f(z_{0}) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+       \frac{f(\zeta)}{\zeta-z_{0}}d\zeta,\qquad \zeta-z_{0} = re^{it}
+  \end{gather*}
+  $\Rightarrow$
+  \begin{gather*}
+    f(z_{0}) = \frac{1}{2\pi} \int_{0}^{2\pi} f(z_{0}+r e^{it})\,dt =
+       \frac{1}{2\pi i} \int_{0}^{2\pi} \frac{f(z_{0}+ re^{it})}{re^{it}}
+       ire^{it}\,dt
+  \end{gather*}
+  \highl{Mittelwerteigenschaft}
+\end{bemerk}
+
+\begin{lemma}
+  Es sei $z_{0}\in\C, r>0$ und $f$ stetig auf $\partial K_{r}(z_{0}) =
+  \{\zeta\colon \abs{\zeta-z_{0}}=r \}$, $H(z) =
+  \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta$ für $z$ mit
+  $\abs{z-z_{0}}<r$ $\Rightarrow$ $H(z) = \sum_{k=0}^{\infty} a_{k}
+  (z-z_{0})^{k}$, wobei $a_{k} = \oint_{\abs{\zeta-z_{0}}=r}
+  \frac{f(\zeta)}{(\zeta-z_{0})^{k+1}}d\zeta$ absolut konvergent für
+  $\abs{z-z_{0}}<r$ und gleichmäßig konvergent auf $\{z\colon
+  \abs{z-z_{0}}\leq r_{1}<r\}$
+
+  \begin{proof}
+    Es sei $\abs{z-z_{0}}=r_{1}< r$ und $\abs{\zeta-z_{0}}=r$ $\Rightarrow$
+    \begin{gather*}
+      \abs[\Big]{\frac{z-z_{0}}{\zeta-z_{0}}} = \frac{r_{1}}{r} < 1
+         \Rightarrow \frac{1}{\zeta-z} = \frac{1}{\zeta-z_{0}}
+         \frac{\zeta-z_{0}}{\zeta-z} = \frac{1}{\zeta-z_{0}}
+         \frac{1}{\frac{\zeta-z+z_{0}-z_{0}}{\zeta-z}} =
+         \frac{1}{\zeta-z_{0}}
+         \frac{1}{1-\Big(\frac{z-z_{0}}{\zeta-z_{0}}\Big)}
+    \end{gather*}
+    \todo{hier fehlt noch der Rest}
+  \end{proof}
+\end{lemma}
+
+\begin{satz}
+  $G\subset\C$ offen, $f:G\rightarrow\C$ holomorph. Dann:
+  \begin{enumerate}
+   \item Es sei $0<r <R \leq\infty, z_{0}\in G, K_{R}(z_{0})\subset G$
+    $\Rightarrow$ $f(z) = \sum_{k=0}^{\infty} a_{k}(z-z_{0})^{k}$ für
+    alle $z\in K_{R}(z_{0})$. Die Koeffizienten $a_{k}$ sind eindeutig
+    bestimmt und es gilt:
+    \begin{gather*}
+      a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+         \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =
+         \frac{f^{(k)}(z_{0})}{k!}\quad(k\in\N_{0})
+    \end{gather*}
+
+   \item $f$ ist auf $G$ beliebig oft differenzierbar (weil $f$ für jeden
+    Punkt in $G$ als Potenzreihe darstellbar und diese Potenzreihe ist
+    beliebig oft differenzierbar) und es gilt:
+    \begin{gather*}
+      f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+         \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta \quad(k\in\N_{0})
+    \end{gather*}
+    wobei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ und $z\in
+    K_{r}(z_{0})$
+    \highl{Cauchy-Integralformel für Ableitungen}
+  \end{enumerate}
+
+  \begin{proof}
+    \begin{enumerate}[1.\,Schritt]
+     \item (1) $G_{0} = K_{R}(z_{0})$ \todo{Satz 2} $\Rightarrow$
+      \begin{gather*}
+        f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
+           \frac{(\zeta)}{\zeta-z}d\zeta \quad\text{für } z\in K_{\rho}
+           (z_{0}), \rho<R
+      \end{gather*}
+      Lemma 5 $\Rightarrow$
+      \begin{gather*}
+        f(z) = \sum_{k=0}^{\infty} a_{k} (z-z_{0})^{k}
+      \end{gather*}
+      wobei
+      \begin{gather*}
+        a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
+           \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{lemma 1} \frac{1}{2\pi
+           i} \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta
+      \end{gather*}
+      für $0<r<R$
+
+     \item (2) Nach \todo{Satz 6/10.1.2} ist $f$ beliebig oft
+      differenzierbar in $K_{R}(z_{0})$ für beliebiges $z_{0}\in G$.
+      $\Rightarrow$ $f$ beliebig oft differenzierbar.
+
+      Es sei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ Aus (1) folgt
+      (Entwicklung in $z$)
+      \begin{gather*}
+        f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\delta}
+           \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{Lemma 1}
+           \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+           \frac{f(\zeta)}{\zeta-z}d\zeta
+      \end{gather*}
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{folger}\label{fol:3}
+  $G\subset\C$ sei eine offene Menge. Dann sind folgende Aussagen
+  äquivalent:
+  \begin{enumerate}
+   \item $f$ holomorph in $G$
+   \item $f$ besitzt eine lokale Stammfunktion (d.\,h. in jedem
+    Punkt aus $K_{r}(z_{0})\subset G$)
+   \item $f$ lokal als Potenzreihe darstellbar (d.\,h. in jedem Punkt aus
+    $K_{r}(z_{0})\subset G$)
+   \item $f(x+iy) = u(x,y) + iv(x,y)$ und $u,v$ differenzierbar in $G$
+    und es gelten die Cauchy-Riemannsche-Differentialgleichungen.
+  \end{enumerate}
+\end{folger}
+
+\begin{folger}[Riemannscher Hebbarkeitssatz]
+  $G\subset G$ offen und $z_{0}\in G$
+  \begin{enumerate}
+   \item $f$ holomorph in $G\setminus\{z_{0}\}$ und stetig in $z_{0}$
+    $\Rightarrow$ $f$ ist holomorph in $z_{0}$
+   \item $f$ holomorph in $G\setminus\{z_{0}\}$ und beschränkt in
+    $K_{\delta}(z_{0})$ $\Rightarrow$ $\exists$ eine holomorphe Funktion
+    $h\colon G\rightarrow\C$ mit $h(z) =f(z)$ für alle $z\not=z_{0}$
+  \end{enumerate}
+
+  \begin{proof}
+    $f$ stetig in $z_{0}$ und holomorph in $G\setminus\{z_{0}\}$. Nach
+    \todo{Folgerung 10/10.2.3} besitzt $f$ eine Stammfunktion in
+    $K_{\delta}(z_{0})$. Nach \autoref{fol:3} $f=F'$ holomorph in
+    $K_{\delta}(z_{0})$
+
+    $f$ holomorph in $K_{\delta}(z_{0})\setminus\{z_{0}\}$, beschränkt in
+    $K_{\delta}(z_{0})$ $\Rightarrow$ setzen:
+    \begin{gather*}
+      g(z) := \begin{cases}
+                (z-z_{0})f(z)&z\not=z_{0}\\
+                0&z=z_{0}
+              \end{cases}
+    \end{gather*}
+    $\Rightarrow$ $G$ stetig in $z_{0}$, holomorph in
+    $K_{\delta}(z_{0})\setminus\{z_{0}\}$ $\Rightarrow$ $^{(1)}$ $g$ ist
+    holomorph in $K_{\delta}(z_{0})$ $\Rightarrow$
+    \begin{gather*}
+      h(z) = \begin{cases}
+               \frac{g(z)-g(z_{0})}{z-z_{0}} & z\not= z_{0}\\
+               g'(z_{0}) & z=z_{0}
+             \end{cases}
+         = \begin{cases}f(z) & z\not=z_{0}\\ g'(z_{0})&z=z_{0}\end{cases}
+    \end{gather*}
+    holomorph nach (1)
+  \end{proof}
+\end{folger}
+
+\begin{folger}[Satz von Morera]
+  $G\subset \C$ offen, $f\colon G\rightarrow\C$ stetig. Für jedes
+  abgeschlossene Dreieck $\Delta\subset G$ gelt:
+  \begin{gather*}
+    \oint_{\partial\Delta} f\,dz = 0
+  \end{gather*}
+  Dann ist $f$ holomorph in $G$.
+
+  \begin{proof}
+    Es sei $K_{r}(z_{0})\subset G$. Aus $\oint_{\partial\Delta} f\,dz=0$
+    für alle $\Delta\subset K_{r}(z_{0})$ folgt, dass die Aussage von
+    \todo{lemma 8/10.2.3} $\Rightarrow$ wie in \todo{Satz 9/10.2.3}
+    existiert eine Stammfunktion $F$ auf $K_{r}(z_{0})$, d.\,h. $F'=f$.
+    $F$ holomorph $\Rightarrow$ $f$ holomorph \autoref{fol:3}.
+  \end{proof}
+\end{folger}
+
+\section{Singularitätentheorie}
+\subsection{Laurentreihen}
+
+\begin{lemma}
+  $0<r<R\leq \infty, z_{0}\in\C, K(z_{0},r,R) = K := \{z\colon r
+  <\abs{z-z_{0}}<R\}$ (\highl{Kreisring}) $g:K\rightarrow \C$ holomorph.
+  Dann gilt für alle $r_{1},r_{2}$ mit $r<r_{1}<r_{2}<R$
+  \begin{gather*}
+    I_{1} = \oint_{\abs{z-z_{0}}=r_{1}} g(z)\,dz = \oint_{\abs{z-z_{0}}=r_{2}}
+       g(z)\,dz = I_{2}
+  \end{gather*}
+
+  \begin{proof}
+    analog zu \autoref{lem:3}
+
+    Wir schreiden den Kreisring $K$ mit einem Strahl $\delta$ aus $z_{0}$
+    auf. Damit ergeben sich zwei zusammhängende Gebiete $I_{1}$ und
+    $-I_{2}$ deren Summer nach dem Cauchy'schen-Integralsatz Null seien
+    muss.
+  \end{proof}
+\end{lemma}
 \clearpage
 \appendix
 \pdfbookmark[0]{Index}{index}
