--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -43,7 +43,9 @@
                          % gesetzt werden
 \usepackage{nicefrac}    % kleine Brüche besser aussehen lassen
 \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
-                         % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
+                         % Unterscheidung bei Grafiken
+                         % \input{XYZ.pdf_t}
+\usepackage{esint}       % für den Pfeil am oint
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -236,6 +238,7 @@
 \DeclareMathOperator{\grad}{grad}	% Gradient
 \DeclareMathOperator{\rot}{rot}		% Rotation
 \DeclareMathOperator{\supp}{supp}	% Träger
+\DeclareMathOperator{\Res}{Res}         % Residuum
 
 \makeindex
 
@@ -1673,7 +1676,7 @@ Folgerungen daraus:
 \end{bemerk}
 
 \subsection{Differentialoperatoren in krummlinigen Koordinaten}
-$n=3$: \highl{Krumlinige Koordinaten} auf $\Omega\subseteq\R^{3}$,
+$n=3$: \highl{Krummlinige Koordinaten} auf $\Omega\subseteq\R^{3}$,
 $\Omega$ offen: $g: G\rightarrow \Omega$ bijektive $C^{1}$-Abbildung
 (\highl{Diffeomorphismus}), d.\,h. $x=g_{1}(u,v,w), y=g_{2}(u,v,w),
 z=g_{3}(u,v,w)$
@@ -4559,7 +4562,7 @@ Zu beginn einige Wiederholungen:
   Parameterdarstellung der Kurve: $g(t) = z = z_{0}+R e^{it}$
   $\Rightarrow$ $z-z_{0} = Re^{it}$ mit $t\in[0,2\pi]$.
   \begin{gather*}
-    \int_{\Gamma} (z-z_{0})^{n}\,dz = \oint_{\abs{z-z_{0}}=R}
+    \int_{\Gamma} (z-z_{0})^{n}\,dz = \ointclockwise_{\abs{z-z_{0}}=R}
        (z-z_{0})^{n}\,dz = \int_{0}^{2\pi} R^{n}e^{int} Rie^{it}\,dt =
        iR^{n+1} \int_{0}^{2\pi} e^{i(n+1)t}\,dt =
        \begin{cases}2\pi i& n=-1\\0&n\not=-1\end{cases}
@@ -4989,8 +4992,8 @@ $\int_{\Gamma} f(z)\,dz =0$.
   Es sei $z\in K_{r}(z_{0})$ und $\overline{K_{\delta}(z)}\subset
   K_{r}(z_{0})$. Es sei $h$ holomorph in $G\setminus\{z\}$. $\Rightarrow$
   \begin{gather*}
-    \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
-       \oint_{\abs{\zeta-z}=\delta} h(\zeta)\,d\zeta
+    \ointclockwise_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+       \ointclockwise_{\abs{\zeta-z}=\delta} h(\zeta)\,d\zeta
   \end{gather*}
 
   \begin{proof}
@@ -5022,7 +5025,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   $G\subset \C$ offen, $f\colon G\rightarrow\C$ holomorph, $z_{0}\in G$,
   $\overline{K_{r}(z_{0})}\subset G$ ($r>0$). Dann gilt:
   \begin{gather*}
-    f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+    f(z) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
        \frac{f(\zeta)}{\zeta-z}\,d\zeta
   \end{gather*}
   für alle $z\in K_{r}(z_{0})$.
@@ -5040,15 +5043,15 @@ $\int_{\Gamma} f(z)\,dz =0$.
     stetig in $\Omega$ und holomorph auf $\Omega\setminus\{z\}$. Nach
     \autoref{fol:2} gilt der Cauchy'sche Integralsatz für $h$ und
     \begin{align*}
-      0 &= \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
-         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(z)}{\zeta-z}d\zeta\\
-      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         f(z)\oint_{\abs{\zeta-z_{0}}=r} \frac{1}{\zeta-z}d\zeta\\
-      &=\oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         f(z)\oint_{\abs{\zeta-z}=\delta} \frac{d\zeta}{\zeta-z}
+      0 &= \ointclockwise_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+         \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(z)}{\zeta-z}d\zeta\\
+      &= \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{1}{\zeta-z}d\zeta\\
+      &=\ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\ointclockwise_{\abs{\zeta-z}=\delta} \frac{d\zeta}{\zeta-z}
          &\text{nach \todo{link: lemma 1}}\\
-      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+      &= \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
          f(z) 2\pi i &\text{nach \todo{link: bsp 10.2.1/4}}
     \end{align*}
   \end{proof}
@@ -5067,7 +5070,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \begin{bemerk}
   Für $z=z_{0}$ gilt
   \begin{gather*}
-    f(z_{0}) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+    f(z_{0}) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
        \frac{f(\zeta)}{\zeta-z_{0}}d\zeta,\qquad \zeta-z_{0} = re^{it}
   \end{gather*}
   $\Rightarrow$
@@ -5080,11 +5083,12 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \end{bemerk}
 
 \begin{lemma}
+\label{lem:1024-5}
   Es sei $z_{0}\in\C, r>0$ und $f$ stetig auf $\partial K_{r}(z_{0}) =
   \{\zeta\colon \abs{\zeta-z_{0}}=r \}$, $H(z) =
-  \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta$ für $z$ mit
+  \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta$ für $z$ mit
   $\abs{z-z_{0}}<r$ $\Rightarrow$ $H(z) = \sum_{k=0}^{\infty} a_{k}
-  (z-z_{0})^{k}$, wobei $a_{k} = \oint_{\abs{\zeta-z_{0}}=r}
+  (z-z_{0})^{k}$, wobei $a_{k} = \ointclockwise_{\abs{\zeta-z_{0}}=r}
   \frac{f(\zeta)}{(\zeta-z_{0})^{k+1}}d\zeta$ absolut konvergent für
   $\abs{z-z_{0}}<r$ und gleichmäßig konvergent auf $\{z\colon
   \abs{z-z_{0}}\leq r_{1}<r\}$
@@ -5111,7 +5115,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     alle $z\in K_{R}(z_{0})$. Die Koeffizienten $a_{k}$ sind eindeutig
     bestimmt und es gilt:
     \begin{gather*}
-      a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+      a_{k} = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
          \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =
          \frac{f^{(k)}(z_{0})}{k!}\quad(k\in\N_{0})
     \end{gather*}
@@ -5120,7 +5124,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     Punkt in $G$ als Potenzreihe darstellbar und diese Potenzreihe ist
     beliebig oft differenzierbar) und es gilt:
     \begin{gather*}
-      f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+      f^{(k)}(z) = \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
          \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta \quad(k\in\N_{0})
     \end{gather*}
     wobei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ und $z\in
@@ -5132,7 +5136,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     \begin{enumerate}[1.\,Schritt]
      \item (1) $G_{0} = K_{R}(z_{0})$ \todo{Satz 2} $\Rightarrow$
       \begin{gather*}
-        f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
+        f(z) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\rho}
            \frac{(\zeta)}{\zeta-z}d\zeta \quad\text{für } z\in K_{\rho}
            (z_{0}), \rho<R
       \end{gather*}
@@ -5142,9 +5146,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
       \end{gather*}
       wobei
       \begin{gather*}
-        a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
+        a_{k} = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\rho}
            \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{lemma 1} \frac{1}{2\pi
-           i} \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta
+           i} \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta
       \end{gather*}
       für $0<r<R$
 
@@ -5155,9 +5159,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
       Es sei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ Aus (1) folgt
       (Entwicklung in $z$)
       \begin{gather*}
-        f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\delta}
+        f^{(k)}(z) = \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\delta}
            \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{Lemma 1}
-           \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+           \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
            \frac{f(\zeta)}{\zeta-z}d\zeta
       \end{gather*}
     \end{enumerate}
@@ -5220,12 +5224,12 @@ $\int_{\Gamma} f(z)\,dz =0$.
   $G\subset \C$ offen, $f\colon G\rightarrow\C$ stetig. Für jedes
   abgeschlossene Dreieck $\Delta\subset G$ gelt:
   \begin{gather*}
-    \oint_{\partial\Delta} f\,dz = 0
+    \ointclockwise_{\partial\Delta} f\,dz = 0
   \end{gather*}
   Dann ist $f$ holomorph in $G$.
 
   \begin{proof}
-    Es sei $K_{r}(z_{0})\subset G$. Aus $\oint_{\partial\Delta} f\,dz=0$
+    Es sei $K_{r}(z_{0})\subset G$. Aus $\ointclockwise_{\partial\Delta} f\,dz=0$
     für alle $\Delta\subset K_{r}(z_{0})$ folgt, dass die Aussage von
     \todo{lemma 8/10.2.3} $\Rightarrow$ wie in \todo{Satz 9/10.2.3}
     existiert eine Stammfunktion $F$ auf $K_{r}(z_{0})$, d.\,h. $F'=f$.
@@ -5242,7 +5246,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   <\abs{z-z_{0}}<R\}$ (\highl{Kreisring}) $g:K\rightarrow \C$ holomorph.
   Dann gilt für alle $r_{1},r_{2}$ mit $r<r_{1}<r_{2}<R$
   \begin{gather*}
-    I_{1} = \oint_{\abs{z-z_{0}}=r_{1}} g(z)\,dz = \oint_{\abs{z-z_{0}}=r_{2}}
+    I_{1} = \ointclockwise_{\abs{z-z_{0}}=r_{1}} g(z)\,dz = \ointclockwise_{\abs{z-z_{0}}=r_{2}}
        g(z)\,dz = I_{2}
   \end{gather*}
 
@@ -5257,12 +5261,13 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \end{lemma}
 
 \begin{lemma}
+\label{lem:1031-2}
   Sei $0<r<R\leq \infty, K:=K(z_0, r,R)= \{z: r< \lvert z-z_0\rvert
   <R\}, f:K\rightarrow \C$ holomorph. Dann gilt für $r< r_1< \lvert
   z-z_0 \rvert <r_2<R$:
   \begin{align*}
-    f(z) &= \frac{1}{2\pi i} \oint_{\lvert \zeta -z_0\rvert=r_1}
-    \frac{f(\zeta)}{\zeta-z} d\zeta &- \frac{1}{2\pi i} \oint_{\lvert
+    f(z) &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta -z_0\rvert=r_1}
+    \frac{f(\zeta)}{\zeta-z} d\zeta &- \frac{1}{2\pi i} \ointclockwise_{\lvert
       \zeta -z_0\rvert=r_2} \frac{f(\zeta)}{\zeta-z} d\zeta\\
     &= f_2(z) &+ f_1(z)
   \end{align*}
@@ -5278,18 +5283,135 @@ $\int_{\Gamma} f(z)\,dz =0$.
     \end{gather*}
     Aus dem \autoref{lem:1031-1} folgt:
     \begin{align*}
-      \oint_{\lvert \zeta-z_0\rvert =r_1} g(\zeta)d\zeta &=
-      \oint_{\lvert \zeta-z_0\rvert =r_2} g(\zeta)d\zeta \\
-      &\Rightarrow \oint_{\lvert \zeta-z_0\rvert =r_1}
-      \frac{f(\zeta)}{\zeta-z} d\zeta -f(z) \underbrace{\oint_{\lvert
+      \ointclockwise_{\lvert \zeta-z_0\rvert =r_1} g(\zeta)d\zeta &=
+      \ointclockwise_{\lvert \zeta-z_0\rvert =r_2} g(\zeta)d\zeta \\
+      &\Rightarrow \ointclockwise_{\lvert \zeta-z_0\rvert =r_1}
+      \frac{f(\zeta)}{\zeta-z} d\zeta -f(z) \underbrace{\ointclockwise_{\lvert
         \zeta-z_0\rvert =r_1} \frac{d\zeta}{\zeta-z}}_{=0}\\
-      &= \oint_{\lvert \zeta-z_0\rvert =r_2} \frac{f(\zeta)}{\zeta-z}
-      d\zeta -f(z) \underbrace{\oint_{\lvert \zeta-z_0\rvert =r_2}
-        \frac{d\zeta}{\zeta-z}}_{= \oint_{\lvert\zeta-z\rvert =\delta}
+      &= \ointclockwise_{\lvert \zeta-z_0\rvert =r_2} \frac{f(\zeta)}{\zeta-z}
+      d\zeta -f(z) \underbrace{\ointclockwise_{\lvert \zeta-z_0\rvert =r_2}
+        \frac{d\zeta}{\zeta-z}}_{= \ointclockwise_{\lvert\zeta-z\rvert =\delta}
         \frac{d\zeta}{\zeta-z} = 2\pi i}
     \end{align*}
   \end{proof}
 \end{lemma}
+
+\begin{satz}[Laurentreihensatz]
+  Sei $K=K(z_0,r,R)$ ein Kreisring, $f$ holomorph auf $K$. Dann gilt:
+  \begin{enumerate}
+  \item Für alle $z\in K$ ist die Reihe
+    \[f(z) = \underbrace{\sum_{k=0}^\infty a_k (z-z_0)^k}_{f_2(z)} +
+    \underbrace{\sum_{k=-1}^{-\infty} a_k(z-z_0)^k}_{f_1(z)}\]
+    absolut konvergent. Sie heißt auch
+    \emph{\index{Laurentreihe}Laurentreihe}.
+  \item Die Koeffizienten $(a_k)$ sind eindeutig bestimmt und es gilt:
+    \[\forall k\in\Z, r<\rho<R: a_k= \frac{1}{2\pi i}
+    \ointclockwise_{\lvert \zeta-z_0\rvert=\rho}
+    \frac{f(\zeta)}{(\zeta - z_0)^{k+1}} d\zeta\]
+  \item Der Hauptteil der Laurentreihe $f_1$ konvergiert absolut und
+    gleichmäßig auf $\{z: \lvert z-z_0\rvert \geq r_1\}$ mit $r_1>r$
+    und ist holomorph auf $\C\backslash \overline{K_r(z_0)}$. Weiter
+    ist $f_2$ ebenfalls absolut konvergent und gleichmäßig auf $\{z:
+    \lvert z-z_0\rvert \leq r_2\}$ mit $r_2<R$ und ist holomorph auf
+    $K_R(z_0)$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}[1.\,Schr{i}tt:]
+    \item Für die Aussage in (1) wird das \autoref{lem:1031-2}
+      angewendet und es folgt, $f(z)=f_2(z)+f_1(z)$. Nun kann das
+      \autoref{lem:1024-5} angewendet werden und man hat:
+      \begin{align*}
+        f_2(z) &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta -
+          z_0\rvert = r_2} \frac{f(\zeta)}{\zeta-z} d\zeta =
+        \sum_{k=0}^\infty a_k (z-z_0)^k\\
+        a_k &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta- z_0\rvert
+          = r_2} \frac{f(\zeta)}{(\zeta-z)^{k+1}} d\zeta
+      \end{align*}
+    \item Wir betrachten nun $f_1(z)$ mit $\lvert z-z_0\rvert >r_1,
+      \lvert\zeta -z_0\rvert =r_1 \Rightarrow \left\lvert \frac{\zeta-
+          z_0}{z-z_0} \right\lvert<1$. Es ist:
+      \begin{align*}
+        \frac{1}{z-\zeta} &= \frac{1}{z-z_0} \frac{z-z_0}{z-\zeta}
+        =\frac{1}{z-z_0} \frac{1}{\frac{z-\zeta}{z-z_0}} =
+        \frac{1}{z-z_0} \frac{1}{1-\frac{\zeta-z_0}{z-z_0}}\\
+        &= \sum_{k=0}^\infty \frac{(\zeta-z_0)^k}{(z-z_0)^{k+1}}\\
+        &\Rightarrow f_1(z) \frac{1}{2\pi i} \sum_{k=0}^\infty \bigg(
+        \ointclockwise_{\lvert \zeta-z_0\rvert =r_1} f(\zeta)
+        (\zeta-z_0)^k d\zeta\bigg)\frac{1}{(z-z_0)^{k+1}}\\
+        &= \frac{1}{2\pi i} \sum_{k=-1}^{-\infty} \bigg(
+        \ointclockwise_{\lvert \zeta-z_0\rvert =r_1}
+        \frac{f(\zeta)}{(\zeta-z_0)^{k+1}} d\zeta\bigg) (z-z_0)^k
+      \end{align*}
+      Der Term $(z-z_0)^k$ kann als Potenzreihe für
+      $w=\frac{1}{z-z_0}$ betrachtet werden. Damit ist diese absolut
+      konvergent für $\lvert w \rvert> \frac{1}{r_1}\Rightarrow \lvert
+      z-z_0 \rvert >r_1$.
+    \item Es ist zu zeigen, dass $f_1$ holomorph in $\{z: \lvert
+      z-z_0\rvert >r\}$ ist. Wir betrachten die Funktion $\Phi(z) :=
+      f_1(z_0 +\frac{1}{z})= \sum_{k=-1}^{-\infty} a_k\frac{1}{z^k} =
+      \sum_{k=1}^\infty a_{-k} z^k$. Diese ist somit eine Potenzreihe
+      und es folgt, dass $\Phi$ holomorph für $\lvert z\rvert
+      <\frac{1}{r}$ ist. Weiter kann man folgern, dass gilt $f_1(z)=
+      f_1(z_0+z-z_0) =\Phi(\frac{1}{(z-z_0)}$ und man sieht, dass
+      $f_1$ holomorph in $\lvert z-z_0\rvert >r$ ist.
+    \item Nun ist noch offen, dass die $(a_k)$ eindeutig bestimmt
+      sind. Wir nehmen an, $f(z)= \sum_{k=0}^\infty b_k (z-z_0)^k +
+      \sum_{k=-1}^{-\infty} b_k (z-z_0)^k$ auf $r<\lvert z-z_0 \rvert
+      <R$. Sei $r<\rho<R$ und es folgt:
+      \[\ointclockwise_{\lvert z-z_0\rvert =\rho}
+      \frac{f(z)}{(z-z_0)^{l+1}} dz= \sum_{k=-\infty}^\infty b_k
+      \ointclockwise_{\lvert z-z_0\rvert=\rho} (z-z_0)^{k-l-1} dz=
+      2\pi ib_l\]
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die Funktion 
+  \[f_1(z)= \sum_{k=-1}^{-\infty} a_k (z-z_0)^k= a_{-1}\frac{1}{z-z_0}
+  + a_{-2}\frac{1}{(z-z_0)^2}+ \ldots\]
+  heißt Hauptteil und beschreibt die Singularität von $f$ bei
+  $z_0$. Insbesondere gilt für $a_{-1}: \ointclockwise_{\lvert
+    z-z_0\rvert=\rho} f(z)dz=2\pi ia_{-1}$ und $a_{-1}$ heißt
+  \emph{\index{Residuum}Residuum\footnote{Schreibweise: $\Res(f,
+      z_0)$}} von $f$ in $z_0$.
+\end{bemerk}
+
+\begin{bsp}
+  Die Funktion $f(z)=\frac{1}{1+z^2}$ ist holomorph in $\C\backslash \{i,-i\}$.
+  \begin{enumerate}[1.\,F{a}ll]
+  \item $z_0=0\wedge \lvert z \rvert <1$:\\
+    $\Rightarrow \frac{1}{1+z^2} =\sum_{k=0}^\infty (-z^2)^k
+    =\sum_{k=0}^\infty (-1)^k z^{2k}$
+  \item $z_0=0\wedge \lvert z\rvert >1$:\\
+    $\Rightarrow \frac{1}{1+z^2}= \frac{1}{z^2}
+    \frac{1}{1+\frac{1}{z^2}} = \frac{1}{z^2} \sum_{k=0}^\infty (-1)^k
+    z^{-2k} = \frac{1}{z^2}-\frac{1}{z^4}+ \frac{1}{z^6}-\ldots$
+  \item $z_0=i\wedge 0<\lvert z-i\rvert <2$:\\
+    $\Rightarrow \frac{1}{1+z^2}= \frac{1}{(z-i)(z+i)}= \frac{1}{2i}
+    \bigg(\frac{1}{z-i} -\frac{1}{z+i}\bigg)= \frac{1}{2i}
+    \bigg(\frac{1}{z-1} -\frac{1}{2i(1+\frac{z-i}{2i})}\bigg) = \frac{1}{2i}
+    \frac{1}{z-i} +\frac{1}{4} \sum_{k=0}^\infty i^k \frac{(z-i)^k}{2^k}$
+  \end{enumerate}
+\end{bsp}
+
+\subsection{Der Residuensatz}
+
+\begin{defini}
+  Der Koeffizient $a_{-1}$ in der Laurentreihenentwicklung von $f$
+  heißt \emph{\index{Residuum}Residuum} von $f$ in $z_0: \Res(f,z_0)
+  := a_{-1}$, wobei $f(z)=\sum_{k=-\infty}^\infty a_k (z-z_0)^k$ ist.
+\end{defini}
+
+\begin{folger}
+  Sei $f$ holomorph in $K(z_0, r,R)\Rightarrow \ointclockwise_{\lvert
+    z-z_0\rvert =\rho} f(z)dz=2\pi i \Res(f,z_0)$.
+\end{folger}
+
+\begin{bsp}
+  $\ointclockwise_{\lvert z-i\rvert=1} \frac{dz}{1+z^2}=2\pi
+  i\frac{1}{2i}= \pi$
+\end{bsp}
 
 
 \clearpage
